fixed z-index for the poke overlay

--- a/app/client/styles/pages/_chatStreamRoom.scss
+++ b/app/client/styles/pages/_chatStreamRoom.scss
@@ -17,7 +17,7 @@ $mobile_portrait_length: 480px !default;
 }
 
 #conversejs {
-  z-index: 9 !important;
+  z-index: 5 !important;
 
   .badge,
   .chat-info,
